[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Scripts/Main_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/Music/menu_theme.mp3" type="AudioStream" id=2]
[ext_resource path="res://assets/Fonts/Minecraft.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Fonts/Main_menu.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/Background/menu_cave_1.jpg" type="Texture" id=5]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="Theme" id=3]
default_font = ExtResource( 4 )
Button/colors/font_color_disabled = Color( 1, 1, 1, 0.2 )
Button/colors/font_color_focus = Color( 0.0941176, 0.584314, 0.941176, 1 )
Button/colors/font_color_hover = Color( 0.0941176, 0.584314, 0.941176, 1 )
Button/styles/focus = SubResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.234
anchor_top = 0.478
anchor_right = 0.766
anchor_bottom = 0.88
margin_left = 0.383987
margin_top = 0.199982
margin_right = -0.384033
margin_bottom = 38.9999
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 3 )
custom_constants/separation = 18
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
margin_top = 12.0
margin_right = 543.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 4 )
text = "Start"
flat = true

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 543.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 50 )
text = "Options"
flat = true

[node name="Customization" type="Button" parent="VBoxContainer"]
margin_top = 148.0
margin_right = 543.0
margin_bottom = 198.0
rect_min_size = Vector2( 0, 50 )
text = "Customize"
flat = true

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 216.0
margin_right = 543.0
margin_bottom = 266.0
rect_min_size = Vector2( 0, 50 )
text = "Exit"
flat = true

[node name="Menu_theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -281.0
margin_right = 511.0
margin_bottom = 286.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.69
custom_fonts/normal_font = SubResource( 1 )
text = "
 As Above,
		So Below"
fit_content_height = true
scroll_active = false

[node name="Tween" type="Tween" parent="."]

[node name="Tween_inv" type="Tween" parent="."]

[connection signal="mouse_entered" from="VBoxContainer/Start" to="." method="_on_Start_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Options" to="." method="_on_Options_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/Customization" to="." method="_on_Customization_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_completed" from="Tween_inv" to="." method="_on_Tween_inv_tween_completed"]
